#112: update code